tests/ui/type/type-mismatch-suggest-wrap-issue-145634.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-suggest-wrap-issue-145634.rs:8:27
   |
LL |     assert!(matches!(foo, &Some((1, 2))));
   |                      ---  ^^^^^^^^^^^^^ expected `Option<&({integer}, {integer})>`, found `&_`
   |                      |
   |                      this expression has type `Option<&({integer}, {integer})>`
   |
   = note:   expected enum `Option<&({integer}, {integer})>`
           found reference `&_`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
